Fix bug in spacing

--- a/scss/_spacing.scss
+++ b/scss/_spacing.scss
@@ -44,11 +44,11 @@
   .pl-#{$size} {
     padding-left: $length !important;
   }
-  .mx-#{$size} {
+  .px-#{$size} {
     padding-right: $length !important;
     padding-left: $length !important;
   }
-  .my-#{$size} {
+  .py-#{$size} {
     padding-top: $length !important;
     padding-bottom: $length !important;
   }
